Cache Font.width(String), from Sodium-Relief's idea
ImmediatelyFast does not touch tooltips or text measurement at all -- it is
buffer batching only -- so the width caching was genuinely uncovered.

Every visible inventory slot measures its stack count every frame, walking the
string's glyphs each time, over a working set of a few dozen distinct strings.
The cache is keyed by string and cleared on client resource reload, which is
the one event covering resource pack changes, language changes and forced
unicode -- all three re-derive glyph metrics and would otherwise leave the
cache serving widths that are no longer true.

Two deliberate departures from upstream: fastutil's primitive map rather than
LinkedHashMap<String, Integer>, since widths are ints and a boxed map allocates
per distinct string; and no synchronization, because Font.width is a
render-thread call and taking a monitor per measurement costs more than the
measurement saves.

The target is pinned by full descriptor. width has three overloads in 26.1.2
and only the String form is cacheable -- the others carry style and component
structure a string key cannot represent. An unqualified name is how the
tooltip overload mismatch took down Liteminer.

The first attempt wrapped width(FormattedText) as the inner call; the bytecode
says width(String) calls StringSplitter.stringWidth, so that injection point
did not exist. Uses @WrapMethod on the outer method instead.

Also records the Java 25 runtime findings in FEATURES.md, with measurements.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>